--- a/frontend/best-food-app/src/styles.css
+++ b/frontend/best-food-app/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+  margin: 0;  /*Tira os Espaços de margem*/
+  padding: 0; /*Tira o preenchimento interno*/
+  box-sizing: border-box; /*limita o tamanho da caixa, atua no padding, defini um tamanho fixo*/
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
