--- a/frontend/best-food-app/src/app/components/menus/menu-list/menu-list.component.html
+++ b/frontend/best-food-app/src/app/components/menus/menu-list/menu-list.component.html
@@ -1,13 +1,5 @@
-<h2>Restaurantes</h2>
+<app-header></app-header>
 
-<section>
-  <div *ngIf="menuItems.length == 0" class="alert alert-warning" role="alert">
-    Nenhum prato disponível.
-  </div>
+<app-menu-list-item [menuItems]="menuItems" class="menu-items"></app-menu-list-item>
 
-  <ul class="list-group" *ngIf="menuItems.length > 0">
-    <li class="list-group-item" *ngFor="let menuItem of menuItems">
-      <app-menu-list-item [menuItems]="menuItems" class="restaurant-item"></app-menu-list-item>
-    </li>
-  </ul>
-</section>
+<app-footer></app-footer>
