--- a/frontend/best-food-app/src/app/pages/home/home.component.html
+++ b/frontend/best-food-app/src/app/pages/home/home.component.html
@@ -1,34 +1,11 @@
-<div class="main">
-  <div class="header">
-    <button class="options-btn">
-      <img src="../../../assets/images/icons/burger.svg" alt="">
-    </button>
-    <div class="user-informations">
-      <span>Olá Fred! Seja bem vindo!</span>
-      <div class="address">
-        <img src="../../../assets/images/icons/location.svg" alt="">
-        <b>Uberaba - MG</b>
-      </div>
-    </div>
-  </div>
+<app-header></app-header>
 
+<div class="main">
   <div class="restaurants-container">
     <app-restaurant-list></app-restaurant-list>
   </div>
-
-  <div ></div>
-  <div class="restaurant-search">
-    <input type="text">
-  </div>
-
-  <div class="action-buttons">
-    <button>
-      <img src="../../../assets/images/icons/home.svg" alt="">
-    </button>
-    <button>
-      <img src="../../../assets/images/icons/search.svg" alt="">
-    </button><button>
-      <img src="../../../assets/images/icons/profile.svg" alt="">
-    </button>
-  </div>
 </div>
+
+<app-search></app-search>
+
+<app-footer></app-footer>
