feat: added search menu

--- a/frontend/best-food-app/src/app/components/header/header.component.css
+++ b/frontend/best-food-app/src/app/components/header/header.component.css
@@ -11,6 +11,15 @@
   height: 10vh;
 }
 
+.header button {
+  border: none;
+}
+.header button img {
+  width: 32px;
+  height: 32px;
+
+}
+
 .image-logo {
   display: flex;
   justify-content: center;
