refact: changes header layout

--- a/frontend/best-food-app/src/app/components/footer/footer.component.html
+++ b/frontend/best-food-app/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer>
   <div class="action-buttons">
-    <button>
-      <img src="../../../assets/images/icons/home.svg" alt="">
+    <button >
+      <img src="../../../assets/images/icons/home.svg" (click)="navigateToHome()">
     </button>
     <button>
-      <img src="../../../assets/images/icons/profile.svg" alt="">
+      <img src="../../../assets/images/icons/logout.svg"(click)="logoff()" alt="">
     </button>
   </div>
 </footer>
