--- a/frontend/best-food-app/src/app/components/header/header.component.html
+++ b/frontend/best-food-app/src/app/components/header/header.component.html
@@ -10,10 +10,10 @@
 
 
   <div class="user-informations">
-    <span>Olá Fred! Seja bem vindo!</span>
+    <p>Olá Fred! Seja bem vindo!</p>
     <div class="address">
-      <img src="../../../assets/images/icons/location.svg" alt="">
       <b>Uberaba - MG</b>
+      <img src="../../../assets/images/icons/location.svg" alt="">
     </div>
   </div>
 </div>
