--- a/frontend/best-food-app/src/app/pages/home/home.component.css
+++ b/frontend/best-food-app/src/app/pages/home/home.component.css
@@ -9,5 +9,14 @@
   flex: 1; /* Faz com que este conteúdo ocupe o espaço restante */
   height: 80vh;
   padding: 20px;
+
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .restaurants-container {
+    padding: 0px;
+  }
 }
 
