--- a/frontend/best-food-app/src/app/components/menus/menu-list-item/menu-list-item.component.css
+++ b/frontend/best-food-app/src/app/components/menus/menu-list-item/menu-list-item.component.css
@@ -5,7 +5,7 @@
 .restaurant-info {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 6px;
 }
 
 .banner {
@@ -19,8 +19,7 @@
   display: flex;
   align-items: center;
   background: rgba(255, 255, 255, 0.7);
-  padding: 10px;
-  border-radius: 10px;
+  padding: 0px;
 }
 
 .logo {
@@ -52,7 +51,7 @@ h3 {
 }
 
 .rating {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .list-group {
@@ -73,15 +72,34 @@ h3 {
   height: 256px;
   object-fit: contain;
 }
-
-.item-menu-description{
-
+.restaurant-informations {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: start;
+  gap: 20px;
+  margin-top: 5px;
 }
+.group-info {
+  font-size: 12px;
+  font-weight: 600;
+}
+
 
 @media screen and (max-width: 768px) {
 
+  .restaurant-informations {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5px;
+    margin-top: 5px;
+  }
+
   .restaurant-section {
     width: 100%;
+    padding-bottom: 80px;
   }
 
   .list-group{
