--- a/frontend/best-food-app/src/app/components/menus/menu-list-item/menu-list-item.component.html
+++ b/frontend/best-food-app/src/app/components/menus/menu-list-item/menu-list-item.component.html
@@ -1,9 +1,6 @@
 <section class="restaurant-section">
-  <div *ngIf="menuItems.length == 0" class="alert alert-warning" role="alert">
-    Nenhum prato disponível.
-  </div>
+  <div class="restaurant-info" *ngIf="restaurantInfo">
 
-  <div class="restaurant-info">
     <div>
       <img class="banner" [src]="restaurantInfo.bannerImage" alt="Imagem do restaurante">
     </div>
@@ -12,15 +9,27 @@
       <img class="logo" [src]="restaurantInfo.logoImage" alt="Logo do restaurante">
       <div class="title-rating">
         <h3>{{ restaurantInfo.name }}</h3>
-        <div class="rating-container">
-          <img class="star-icon" src="../../../../assets/images/icons/star.svg" alt="Classificação por estrelas">
-          <span class="rating">{{ restaurantInfo.rating }}</span>
-        </div>
+      </div>
+    </div>
+
+    <div class="restaurant-informations">
+      <div class="rating-container">
+        <img class="star-icon" src="../../../../assets/images/icons/star.svg" alt="Classificação por estrelas">
+        <span class="rating">{{ restaurantInfo.rating }}</span>
+      </div>
+      <div class="group-info">
+        <img class="star-icon" src="../../../../assets/images/icons/phone.svg">
+        <span>{{ restaurantInfo.phone }}</span>
+      </div>
+
+      <div class="group-info">
+        <img class="star-icon" src="../../../../assets/images/icons/location.svg">
+        <span>{{ restaurantInfo.address }}</span>
       </div>
     </div>
   </div>
 
-  <ul class="list-group" *ngIf="menuItems.length > 0">
+  <ul class="list-group">
     <li class="list-group-item" *ngFor="let menuItem of menuItems">
       <div class="item-menu-description">
         <div class="menu-details">
