--- a/frontend/best-food-app/src/app/components/restaurants/restaurant-list/restaurant-list.component.html
+++ b/frontend/best-food-app/src/app/components/restaurants/restaurant-list/restaurant-list.component.html
@@ -1,17 +1,6 @@
-
 <section>
-  <div *ngIf="restaurants.length == 0" class="alert alert-warning" role="alert">
-    Nenhum restaurante disponível.
-  </div>
-
-  <ul *ngIf="restaurants.length > 0 && searchResult.restaurants.length == 0 && searchResult.pesquisa == '' ">
+  <ul class="restaurant-list-container">
     <li *ngFor="let restaurant of restaurants">
-      <app-restaurant-list-item [restaurant]="restaurant" class="restaurant-item"></app-restaurant-list-item>
-    </li>
-  </ul>
-
-  <ul *ngIf="searchResult.restaurants.length > 0">
-    <li *ngFor="let restaurant of searchResult.restaurants">
       <app-restaurant-list-item [restaurant]="restaurant" class="restaurant-item"></app-restaurant-list-item>
     </li>
   </ul>
